# carp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTORS.md  Makefile  README.md  SYNTAX.md  TODO.md  carp  carp.c  carp.h  carp_globals.h  carp_helpers.c  carp_helpers.h  carp_instructions.c  carp_instructions.h  carp_labels.c  carp_labels.h  carp_lexer.c  carp_lexer.h  carp_machine.c  carp_machine.h  carp_messages.h  carp_parser.c  carp_parser.h  carp_stack.c  carp_stack.h  carp_types.h  carp_vars.c  carp_vars.h  eval.h  globals.h  httest.c  index.html  init.c  instruction_helpers.c  instruction_helpers.h  instruction_set.h  (+8 more)
CMakeModules/: FindCheck.cmake
carp_stack/: carp_stack.c  carp_stack.h
examples/: .#call.c  ascii.c  call.c  call.carp  data.c  db.c  esp.c  factorial.c  factorial.carp  printing.c  (+4 more)
src/: CMakeLists.txt  carp.c  carp.h  carp_bytecode.c  carp_bytecode.h  carp_instructions.c  carp_instructions.h  carp_lexer.c  carp_lexer.h  carp_machine.c  carp_machine.h  carp_registers.c  carp_registers.h  carp_tok.c  carp_tok.h  carp_tokenizer.c  carp_tokenizer.h  instr_lookup.c  instructions.c  instructions.h  lexer.c  lexer.h  machine.c  machine.h  main.c  reg_lookup.c  registers.c  registers.h  tokenizer.c  tokenizer.h
src/lib/: .#carp_ht.h  carp_hash.c  carp_hash.h  carp_ht.c  carp_ht.h  carp_messages.h  carp_stack.c  carp_stack.h  carp_types.h  ht.c  ht.h  stack.c  stack.h
tests/: CMakeLists.txt  ht.c  registers.c  stack.c  test_instr.c  tests.h
tests/instr/: halt.c  halt.cnot  loadr.c  mov.c  register.c  stack.c  tests_instr.h
(+40 files in other folders)
